js/parser.mjs
// Generated by PEG.js v0.11.0-master.f69239d, https://pegjs.org/

import {Value,Label,LineAware,Operation,cpu,Constant,Symbol,SymbolBuffer,DiskIO,IOFile,InputSymbol,Symbols} from "./cpu/index.mjs";
/*
export {
  peg$SyntaxError as SyntaxError,
  peg$parse as parse
};

export default {
  SyntaxError: peg$SyntaxError,
  parse: peg$parse
};
 */

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message = message;
  this.expected = expected;
  this.found = found;
  this.location = location;
  this.name = "SyntaxError";

  // istanbul ignore next
  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    },

    not: function(expectation) {
      return "not " + describeExpectation(expectation.expected);
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};

  var peg$startRuleFunctions = { Systen: peg$parseSysten };
  var peg$startRuleFunction = peg$parseSysten;

  var peg$c0 = ".data";
  var peg$c1 = ".const";
  var peg$c2 = ".buffer";
  var peg$c3 = ".";
  var peg$c4 = "add";
  var peg$c5 = "sav";
  var peg$c6 = "nand";
  var peg$c7 = "jcz";
  var peg$c8 = ":";
  var peg$c9 = "%";
  var peg$c10 = "'";
  var peg$c11 = "[";
  var peg$c12 = ",";
  var peg$c13 = "]";
  var peg$c14 = "0";
  var peg$c15 = "0x";

  var peg$r0 = /^[\n\r]/;
  var peg$r1 = /^[a-z_]/;
  var peg$r2 = /^[a-z0-9_]/;
  var peg$r3 = /^[$]/;
  var peg$r4 = /^[R|A|I]/;
  var peg$r5 = /^[a-zA-Z_]/;
  var peg$r6 = /^[a-zA-Z_0-9]/;
  var peg$r7 = /^[^']/;
  var peg$r8 = /^[1-9]/;
  var peg$r9 = /^[0-9]/;
  var peg$r10 = /^[0-9a-fA-F]/;
  var peg$r11 = /^[ \t]/;
  var peg$r12 = /^[;]/;
  var peg$r13 = /^[^\n]/;

  var peg$e0 = peg$classExpectation(["\n", "\r"], false, false);
  var peg$e1 = peg$literalExpectation(".data", false);
  var peg$e2 = peg$literalExpectation(".const", false);
  var peg$e3 = peg$literalExpectation(".buffer", false);
  var peg$e4 = peg$otherExpectation("symbol");
  var peg$e5 = peg$otherExpectation("expression");
  var peg$e6 = peg$otherExpectation("strbuf");
  var peg$e7 = peg$otherExpectation("intbuf");
  var peg$e8 = peg$otherExpectation("integer");
  var peg$e9 = peg$otherExpectation("whitespace");
  var peg$e10 = peg$otherExpectation("comment");
  var peg$e11 = peg$otherExpectation("eol");

  var peg$f0 = function() {return cpu.process();};
  var peg$f1 = function(head) { LineAware.line++;};
  var peg$f2 = function(symbol, int) {return new Constant(symbol,int);};
  var peg$f3 = function(symbol, int) {return new Symbol(symbol,int);};
  var peg$f4 = function(symbol, values) {return new SymbolBuffer(symbol,values);};
  var peg$f5 = function(ss) {return ss};
  var peg$f6 = function() {return cpu;};
  var peg$f7 = function(head, tail) {return Operation.ADD(tail);};
  var peg$f8 = function(head, tail) {return Operation.SAV(tail);};
  var peg$f9 = function(head, tail) {return Operation.NAND(tail);};
  var peg$f10 = function(head, tail) {return Operation.JCZ(tail);};
  var peg$f11 = function(head, tail) {return new Label(text().trim().split("").reverse().slice(1).reverse().join(""));};
  var peg$f12 = function(int) { return Value.create(Value.DIRECT,int); };
  var peg$f13 = function(int) { return Value.create(Value.INDIRECT,int);};
  var peg$f14 = function(ss) {return Value.create(Value.SYMBOL,ss);};
  var peg$f15 = function() {return Value.create(Value.INDIRECT,text().trim().substring(1));};
  var peg$f16 = function() {return text().trim();};
  var peg$f17 = function(values) {
      values = values.join("").replace(/\\([nte0])/gi,function (a,t) {
          switch(t) {
            case 'n':
              return '\n';
            case 'e':
              return '\x1b';
            case 't':
              return '\t';
            case '0':
              return '\0';
            /*case 'x':
            case 'X':
              return '\x';
            case 'u':
            case 'U':
              return '\u';*/
          }
          return t;
        });
      console.log(values);
      
       

      return values.split("").map(c => c.charCodeAt(0));};
  var peg$f18 = function(head, values, tail) { 
      console.log(head);
      console.log(values);
      console.log(tail);
      return values;
      };
  var peg$f19 = function(int) {return int;};
  var peg$f20 = function() {return 0;};
  var peg$f21 = function() { return parseInt(text(), 10); };
  var peg$f22 = function() { return parseInt(text(),16);};
  var peg$f23 = function(comment, end) {
     let l = end.split("").filter(t => t == '\n').length;
     LineAware.line+=l;
   };

  var peg$currPos = 0;
  var peg$savedPos = 0;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$expected = [];
  var peg$silentFails = 0;

  var peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return [peg$savedPos, peg$currPos];
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  var peg$VALIDFILENAME = typeof options.filename === "string" && options.filename.length > 0;
  function peg$computeLocation(startPos, endPos) {
    var loc = {};

    if ( peg$VALIDFILENAME ) loc.filename = options.filename;

    var startPosDetails = peg$computePosDetails(startPos);
    loc.start = {
      offset: startPos,
      line: startPosDetails.line,
      column: startPosDetails.column
    };

    var endPosDetails = peg$computePosDetails(endPos);
    loc.end = {
      offset: endPos,
      line: endPosDetails.line,
      column: endPosDetails.column
    };

    return loc;
  }

  function peg$begin() {
    peg$expected.push({ pos: peg$currPos, variants: [] });
  }

  function peg$expect(expected) {
    var top = peg$expected[peg$expected.length - 1];

    if (peg$currPos < top.pos) { return; }

    if (peg$currPos > top.pos) {
      top.pos = peg$currPos;
      top.variants = [];
    }

    top.variants.push(expected);
  }

  function peg$end(invert) {
    var expected = peg$expected.pop();
    var top = peg$expected[peg$expected.length - 1];
    var variants = expected.variants;

    if (top.pos !== expected.pos) { return; }

    if (invert) {
      variants = variants.map(function(e) {
        return e.type === "not" ? e.expected : { type: "not", expected: e };
      });
    }

    Array.prototype.push.apply(top.variants, variants);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$buildError() {
    var expected = peg$expected[0];
    var failPos = expected.pos;

    return peg$buildStructuredError(
      expected.variants,
      failPos < input.length ? input.charAt(failPos) : null,
      failPos < input.length
        ? peg$computeLocation(failPos, failPos + 1)
        : peg$computeLocation(failPos, failPos)
    );
  }

  function peg$parseSysten() {
    var s0, s1, s2, s3, s4, s5;

    var rule$expects = function (expected) {
      if (peg$silentFails === 0) peg$expect(expected);
    }

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseLineComment();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseLineComment();
    }
    s2 = peg$parseConstantsBlock();
    if (s2 === peg$FAILED) {
      s2 = null;
    }
    s3 = peg$parseBufferBlock();
    if (s3 === peg$FAILED) {
      s3 = null;
    }
    s4 = peg$parseDataBlock();
    if (s4 === peg$FAILED) {
      s4 = null;
    }
    s5 = peg$parseExpression();
    peg$savedPos = s0;
    s0 = peg$f0();

    return s0;
  }

  function peg$parseLineComment() {
    var s0, s1, s2, s3, s4;

    var rule$expects = function (expected) {
      if (peg$silentFails === 0) peg$expect(expected);
    }

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parseComment();
    if (s2 === peg$FAILED) {
      s2 = null;
    }
    s3 = peg$parse_();
    rule$expects(peg$e0);
    if (peg$r0.test(input.charAt(peg$currPos))) {
      s4 = input.charAt(peg$currPos);
      peg$currPos++;
    } else {
      s4 = peg$FAILED;
    }
    if (s4 !== peg$FAILED) {
      peg$savedPos = s0;
      s0 = peg$f1(s1);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseDataBlock() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11;

    var rule$expects = function (expected) {
      if (peg$silentFails === 0) peg$expect(expected);
    }

    s0 = peg$currPos;
    s1 = peg$parse_();
    rule$expects(peg$e1);
    if (input.substr(peg$currPos, 5) === peg$c0) {
      s2 = peg$c0;
      peg$currPos += 5;
    } else {
      s2 = peg$FAILED;
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      s4 = peg$parseEOL();
      if (s4 !== peg$FAILED) {
        s5 = [];
        s6 = peg$parseLineComment();
        while (s6 !== peg$FAILED) {
          s5.push(s6);
          s6 = peg$parseLineComment();
        }
        s6 = [];
        s7 = peg$currPos;
        s8 = peg$parseDataEntry();
        if (s8 !== peg$FAILED) {
          s9 = peg$parseEOL();
          if (s9 !== peg$FAILED) {
            s10 = [];
            s11 = peg$parseLineComment();
            while (s11 !== peg$FAILED) {
              s10.push(s11);
              s11 = peg$parseLineComment();
            }
            s8 = [s8, s9, s10];
            s7 = s8;
          } else {
            peg$currPos = s7;
            s7 = peg$FAILED;
          }
        } else {
          peg$currPos = s7;
          s7 = peg$FAILED;
        }
        while (s7 !== peg$FAILED) {
          s6.push(s7);
          s7 = peg$currPos;
          s8 = peg$parseDataEntry();
          if (s8 !== peg$FAILED) {
            s9 = peg$parseEOL();
            if (s9 !== peg$FAILED) {
              s10 = [];
              s11 = peg$parseLineComment();
              while (s11 !== peg$FAILED) {
                s10.push(s11);
                s11 = peg$parseLineComment();
              }
              s8 = [s8, s9, s10];
              s7 = s8;
            } else {
              peg$currPos = s7;
              s7 = peg$FAILED;
            }
          } else {
            peg$currPos = s7;
            s7 = peg$FAILED;
          }
        }
        s7 = peg$parse_();
        s1 = [s1, s2, s3, s4, s5, s6, s7];
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseConstantsBlock() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

    var rule$expects = function (expected) {
      if (peg$silentFails === 0) peg$expect(expected);
    }

    s0 = peg$currPos;
    s1 = peg$parse_();
    rule$expects(peg$e2);
    if (input.substr(peg$currPos, 6) === peg$c1) {
      s2 = peg$c1;
      peg$currPos += 6;
    } else {
      s2 = peg$FAILED;
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      s4 = [];
      s5 = peg$parseEOL();
      while (s5 !== peg$FAILED) {
        s4.push(s5);
        s5 = peg$parseEOL();
      }
      s5 = [];
      s6 = peg$currPos;
      s7 = peg$parseConstantsEntry();
      if (s7 !== peg$FAILED) {
        s8 = peg$parseEOL();
        if (s8 !== peg$FAILED) {
          s9 = [];
          s10 = peg$parseLineComment();
          while (s10 !== peg$FAILED) {
            s9.push(s10);
            s10 = peg$parseLineComment();
          }
          s7 = [s7, s8, s9];
          s6 = s7;
        } else {
          peg$currPos = s6;
          s6 = peg$FAILED;
        }
      } else {
        peg$currPos = s6;
        s6 = peg$FAILED;
      }
      while (s6 !== peg$FAILED) {
        s5.push(s6);
        s6 = peg$currPos;
        s7 = peg$parseConstantsEntry();
        if (s7 !== peg$FAILED) {
          s8 = peg$parseEOL();
          if (s8 !== peg$FAILED) {
            s9 = [];
            s10 = peg$parseLineComment();
            while (s10 !== peg$FAILED) {
              s9.push(s10);
              s10 = peg$parseLineComment();
            }
            s7 = [s7, s8, s9];
            s6 = s7;
          } else {
            peg$currPos = s6;
            s6 = peg$FAILED;
          }
        } else {
          peg$currPos = s6;
          s6 = peg$FAILED;
        }
      }
      s6 = peg$parse_();
      s1 = [s1, s2, s3, s4, s5, s6];
      s0 = s1;
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseBufferBlock() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10;

    var rule$expects = function (expected) {
      if (peg$silentFails === 0) peg$expect(expected);
    }

    s0 = peg$currPos;
    s1 = peg$parse_();
    rule$expects(peg$e3);
    if (input.substr(peg$currPos, 7) === peg$c2) {
      s2 = peg$c2;
      peg$currPos += 7;
    } else {
      s2 = peg$FAILED;
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      s4 = [];
      s5 = peg$parseEOL();
      while (s5 !== peg$FAILED) {
        s4.push(s5);
        s5 = peg$parseEOL();
      }
      s5 = [];
      s6 = peg$currPos;
      s7 = peg$parseBufferEntry();
      if (s7 !== peg$FAILED) {
        s8 = peg$parseEOL();
        if (s8 !== peg$FAILED) {
          s9 = [];
          s10 = peg$parseLineComment();
          while (s10 !== peg$FAILED) {
            s9.push(s10);
            s10 = peg$parseLineComment();
          }
          s7 = [s7, s8, s9];
          s6 = s7;
        } else {
          peg$currPos = s6;
          s6 = peg$FAILED;
        }
      } else {
        peg$currPos = s6;
        s6 = peg$FAILED;
      }
      while (s6 !== peg$FAILED) {
        s5.push(s6);
        s6 = peg$currPos;
        s7 = peg$parseBufferEntry();
        if (s7 !== peg$FAILED) {
          s8 = peg$parseEOL();
          if (s8 !== peg$FAILED) {
            s9 = [];
            s10 = peg$parseLineComment();
            while (s10 !== peg$FAILED) {
              s9.push(s10);
              s10 = peg$parseLineComment();
            }
            s7 = [s7, s8, s9];
            s6 = s7;
          } else {
            peg$currPos = s6;
            s6 = peg$FAILED;
          }
        } else {
          peg$currPos = s6;
          s6 = peg$FAILED;
        }
      }
      s6 = peg$parse_();
      s1 = [s1, s2, s3, s4, s5, s6];
      s0 = s1;
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseConstantsEntry() {
    var s0, s1, s2, s3, s4;

    var rule$expects = function (expected) {
      if (peg$silentFails === 0) peg$expect(expected);
    }

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parseSymbol();
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      s4 = peg$parseInteger();
      if (s4 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f2(s2, s4);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseDataEntry() {
    var s0, s1, s2, s3, s4;

    var rule$expects = function (expected) {
      if (peg$silentFails === 0) peg$expect(expected);
    }

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parseSymbol();
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      s4 = peg$parseInteger();
      if (s4 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f3(s2, s4);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseBufferEntry() {
    var s0, s1, s2, s3, s4;

    var rule$expects = function (expected) {
      if (peg$silentFails === 0) peg$expect(expected);
    }

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parseSymbol();
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      s4 = peg$parseIntegerBuffer();
      if (s4 === peg$FAILED) {
        s4 = peg$parseStringBuffer();
      }
      if (s4 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f4(s2, s4);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseSymbol() {
    var s0, s1, s2;

    var rule$expects = function (expected) {
      if (peg$silentFails === 0) peg$expect(expected);
    }

    rule$expects(peg$e4);
    peg$silentFails++;
    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 46) {
      s1 = peg$c3;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseSymbolString();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f5(s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    peg$silentFails--;

    return s0;
  }

  function peg$parseExpression() {
    var s0, s1, s2, s3, s4, s5, s6, s7, s8;

    var rule$expects = function (expected) {
      if (peg$silentFails === 0) peg$expect(expected);
    }

    rule$expects(peg$e5);
    peg$silentFails++;
    s0 = peg$currPos;
    s1 = [];
    s2 = peg$currPos;
    s3 = peg$parse_();
    s4 = peg$parseLabel();
    if (s4 === peg$FAILED) {
      s4 = peg$parseAdd();
      if (s4 === peg$FAILED) {
        s4 = peg$parseSav();
        if (s4 === peg$FAILED) {
          s4 = peg$parseJCZ();
          if (s4 === peg$FAILED) {
            s4 = peg$parseNand();
            if (s4 === peg$FAILED) {
              s4 = peg$parseComment();
            }
          }
        }
      }
    }
    if (s4 !== peg$FAILED) {
      s5 = peg$parse_();
      s6 = [];
      s7 = peg$parseLineComment();
      while (s7 !== peg$FAILED) {
        s6.push(s7);
        s7 = peg$parseLineComment();
      }
      s7 = [];
      s8 = peg$parseEOL();
      while (s8 !== peg$FAILED) {
        s7.push(s8);
        s8 = peg$parseEOL();
      }
      s3 = [s3, s4, s5, s6, s7];
      s2 = s3;
    } else {
      peg$currPos = s2;
      s2 = peg$FAILED;
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$currPos;
      s3 = peg$parse_();
      s4 = peg$parseLabel();
      if (s4 === peg$FAILED) {
        s4 = peg$parseAdd();
        if (s4 === peg$FAILED) {
          s4 = peg$parseSav();
          if (s4 === peg$FAILED) {
            s4 = peg$parseJCZ();
            if (s4 === peg$FAILED) {
              s4 = peg$parseNand();
              if (s4 === peg$FAILED) {
                s4 = peg$parseComment();
              }
            }
          }
        }
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parse_();
        s6 = [];
        s7 = peg$parseLineComment();
        while (s7 !== peg$FAILED) {
          s6.push(s7);
          s7 = peg$parseLineComment();
        }
        s7 = [];
        s8 = peg$parseEOL();
        while (s8 !== peg$FAILED) {
          s7.push(s8);
          s8 = peg$parseEOL();
        }
        s3 = [s3, s4, s5, s6, s7];
        s2 = s3;
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
    }
    peg$savedPos = s0;
    s1 = peg$f6();
    s0 = s1;
    peg$silentFails--;

    return s0;
  }

  function peg$parseAdd() {
    var s0, s1, s2, s3, s4, s5;

    var rule$expects = function (expected) {
      if (peg$silentFails === 0) peg$expect(expected);
    }

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (input.substr(peg$currPos, 3) === peg$c4) {
      s2 = peg$c4;
      peg$currPos += 3;
    } else {
      s2 = peg$FAILED;
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      s4 = peg$parseDirectNumber();
      if (s4 === peg$FAILED) {
        s4 = peg$parseIndirectNumber();
        if (s4 === peg$FAILED) {
          s4 = peg$parseSymbolNumber();
        }
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parse_();
        peg$savedPos = s0;
        s0 = peg$f7(s1, s4);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseSav() {
    var s0, s1, s2, s3, s4, s5;

    var rule$expects = function (expected) {
      if (peg$silentFails === 0) peg$expect(expected);
    }

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (input.substr(peg$currPos, 3) === peg$c5) {
      s2 = peg$c5;
      peg$currPos += 3;
    } else {
      s2 = peg$FAILED;
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      s4 = peg$parseDirectNumber();
      if (s4 === peg$FAILED) {
        s4 = peg$parseIndirectNumber();
        if (s4 === peg$FAILED) {
          s4 = peg$parseSymbolNumber();
        }
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parse_();
        peg$savedPos = s0;
        s0 = peg$f8(s1, s4);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseNand() {
    var s0, s1, s2, s3, s4, s5;

    var rule$expects = function (expected) {
      if (peg$silentFails === 0) peg$expect(expected);
    }

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (input.substr(peg$currPos, 4) === peg$c6) {
      s2 = peg$c6;
      peg$currPos += 4;
    } else {
      s2 = peg$FAILED;
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      s4 = peg$parseDirectNumber();
      if (s4 === peg$FAILED) {
        s4 = peg$parseIndirectNumber();
        if (s4 === peg$FAILED) {
          s4 = peg$parseSymbolNumber();
        }
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parse_();
        peg$savedPos = s0;
        s0 = peg$f9(s1, s4);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseJCZ() {
    var s0, s1, s2, s3, s4, s5;

    var rule$expects = function (expected) {
      if (peg$silentFails === 0) peg$expect(expected);
    }

    s0 = peg$currPos;
    s1 = peg$parse_();
    if (input.substr(peg$currPos, 3) === peg$c7) {
      s2 = peg$c7;
      peg$currPos += 3;
    } else {
      s2 = peg$FAILED;
    }
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      s4 = peg$parseDirectNumber();
      if (s4 === peg$FAILED) {
        s4 = peg$parseIndirectNumber();
        if (s4 === peg$FAILED) {
          s4 = peg$parseSymbolNumber();
        }
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parse_();
        peg$savedPos = s0;
        s0 = peg$f10(s1, s4);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }
